--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 
 #postgres
-spring.datasource.url=jdbc:postgresql://34.122.167.148:5432/training?currentSchema=198810202007101001
-spring.datasource.username=squad_team
-spring.datasource.password=passw0rd@2022
+#spring.datasource.url=jdbc:postgresql://34.122.167.148:5432/training?currentSchema=198810202007101001
+#spring.datasource.username=squad_team
+#spring.datasource.password=passw0rd@2022
+
+#mysql
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/amantera
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
 
 #spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 
 ## Hibernate Properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
